@@ -1,5 +1,6 @@
 package dbunit.test;
 
+import dbunit.model.Bean;
 import org.dbunit.dataset.xml.FlatXmlDataSet;
 import org.dbunit.dataset.xml.FlatXmlDataSetBuilder;
 import org.dbunit.operation.DatabaseOperation;
@@ -8,22 +9,19 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-import dbunit.model.Bean;
-import dbunit.service.Service;
-
 public class TestServiceSelect extends TestsSetUp {
+
+    private static final String DATABASE_REQUIRED = "databaseRequiredBySelect.xml";
 
     @Before
     public void setupDatabaseToInitialState() throws Exception {
-        FlatXmlDataSet dataSet = new FlatXmlDataSetBuilder().build(TestServiceSelect.class.getResourceAsStream("databaseRequiredBySelect.xml"));
+        FlatXmlDataSet dataSet = new FlatXmlDataSetBuilder().build(TestServiceSelect.class.getResourceAsStream(DATABASE_REQUIRED));
         DatabaseOperation.CLEAN_INSERT.execute(tester.getConnection(), dataSet);
     }
 
     /**
      * can test that select works by using a debugger and checking the actual
      * database state between different test phases
-     *
-     * @throws Exception
      */
     @Test
     public void testSelect() throws Exception {
@@ -33,7 +31,7 @@ public class TestServiceSelect extends TestsSetUp {
         // verify data fetched from model with our data.
         // this operation can be very complex.
         {
-            Assert.assertEquals(new Long(1), existingBean.getId());
+            Assert.assertEquals(Long.valueOf(1), existingBean.getId());
             Assert.assertEquals("descriere", existingBean.getDescription());
         }
 
@@ -41,7 +39,7 @@ public class TestServiceSelect extends TestsSetUp {
 
     @After
     public void tearDownDatabaseToInitialState() throws Exception {
-        FlatXmlDataSet dataSet = new FlatXmlDataSetBuilder().build(TestServiceSelect.class.getResourceAsStream("databaseRequiredBySelect.xml"));
+        FlatXmlDataSet dataSet = new FlatXmlDataSetBuilder().build(TestServiceSelect.class.getResourceAsStream(DATABASE_REQUIRED));
         DatabaseOperation.TRUNCATE_TABLE.execute(tester.getConnection(), dataSet);
     }
 
